# Smart-assistant

./: CLAUDE.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.claude/: settings.json
.claude/agents/: contract-keeper.md  rust-reviewer.md  security-auditor.md  test-architect.md
.claude/commands/: adr.md  feature.md  gate.md  golden.md  milestone.md  security-review.md  sync-docs.md
.github/workflows/: ci.yml
.sqlx/: query-13163b9fb423f7601683e5cd2c2690ffeb9c2aac7cfd2c5586d5ee39375c037d.json  query-169c0b1cc2c7d4401f1d583b95a1bd4153a9fae244cba9fbffd5dcded1e2ee35.json  query-17d2e86b530cdd95849955eac0ebe2d3d08ee2645f5ab4b0472009ce470b3b4c.json  query-1bb6e3cf87b1fc77329359b6ee4ccd4aaaa3ecd973f18951cbf60cfe498165ba.json  query-1edf8c7c63f6268c263cddaff761416b8442da939163b8fee4ba6fbc54324ca8.json  query-34b3905bfcb6df1faf1bc7dce3c6272d05b52186408d4cd077ced38957339509.json  query-3bb5f90c321480a8da83b3735104df1196f99e2f1c0d1f51c3186a47a83014d6.json  query-4089721bac49eea417f48fb114359733d28c7eade52ff2d35c05cbf38bd269ec.json  query-430d4e560e281e41937cc5460bea7135a947e8b6651229319786190943bd35ba.json  query-4b8470c2c13a089ff7cca75d89ed6c78cfa4b4adad2f06453553b0a3e2ea751c.json  query-5ce1dab6605573e25c5cb21e1f343cbce25aabaa730832ee4fd106a7ee32e1cf.json  query-62b8c5d0350cb27373d9938dbedf597ca09691af3ab35b06ddc9b56c43c002a1.json  query-661412b1dd96fa281c53a61cff1232c45cedc2d62408e72207f853556e17eff7.json  query-669dd2a64975bb08b70c07493f3b55ac810faee53d45a569cba8e018d866cae9.json  query-76bcbdaff74e76438dd65707cedb193f3fdd9cc7108cb214b9706e285c5321c9.json  query-7b1872a652ca75b4b27c16e2d842dee1bf19e5dbb41ca1ab91fd7e33e6a6ac9e.json  query-7bdc7d6e59935e629d69b640c2c3c38e621f9c72f5c421752b909b121e757cec.json  query-8247afe43e19a61e0915a527d7277753730b08a1aded580c41d3be0d7f84ea23.json  query-8d93dda9d827b9ed6db2e1742c2eb559a73a37b4443d20587b2d287d655a7849.json  query-94201d695154a1967d82579676e9578426a9e852f2534e2879ce49d26768c9d6.json  query-961cbee11bec7084696914b736c4fc35c74802a6efca452bb1c2c7dc36ba9091.json  query-98ea27ccb3c096b83003f503ee7d5f194c8247acc2d3055845729f9a9e51dc47.json  query-9b93e6391445b388a02a682b344207bc8373dff6dfbc94b370d17325ada8abc6.json  query-a8c3b618564a1b8e21ee56096adb816750637ffc16ef23c012a42bc9296160d1.json  query-b64f4b204509b4bd5b52aad5b3759bd778d67e089b746d8c7cdd72c78049b4e5.json  query-b972896c47fb792c84a30ef17971a8db2855564e1b275658d2e086984323b5d8.json  query-c59f93befda67378cbf808fe0febb56c20d0a1dfb4a931e41a9a9a6226204bda.json  query-c83cd70dec4d3d4934e6cdccc91a3787d9a42dec77e95a1c3b06642113f503df.json  query-c8f1e6f6f4ed08e83caf6341e05ebde3252aa3ff93a768617f538d855065072c.json  query-d27893775fc4ac8fb86483769c6179e5007c5ccb607c334e2e4e1675414e3ec5.json  query-e4300ce9b18b5899a78e7bbfeb4b83e56b99f3f477990b66e0767c6b6ef22677.json  query-ed847a815d43c54251d3026a56d97e7730d9dd6cb35465fd74814a730d5dca30.json  query-f115a55081cf49b15da090c771d2b7b6d8e149c6af7a26385a5e0acfc3785600.json  query-f2855cc87f5dfc9f9dddee32996ce7c6a1349a66e542df853d496e1e6e8f67c4.json  query-f854196f031d877a016bbbf98ebd916dab1fc147b8f033a2f238e0d84ec5fc02.json  query-f86e3b6323e27ceae0e09c76ace27597c34ea2f5d4a842b20aaf5ff081edba68.json  query-fe00525ecd8b7f2318593a12199396eec25bc333e44b636a651527c90088cc60.json
.zed/: debug.json
crates/jarvis-adapters/: Cargo.toml
crates/jarvis-adapters/src/: browser.rs  claude_cli.rs  coding.rs  lib.rs  mcp_host.rs  tools.rs  web.rs
crates/jarvis-adapters/src/tools/: example_light.rs  example_message.rs  fs_read.rs  timeout.rs
crates/jarvis-adapters/tests/fixtures/claude-cli/: README.md  error_result.jsonl  healthy_stream.jsonl  max_tokens_stream.jsonl  tool_delta_skipped.jsonl  truncated_stream.jsonl
crates/jarvis-agent/: Cargo.toml
crates/jarvis-agent/src/: client.rs  compositor.rs  handler.rs  main.rs
crates/jarvis-application/: Cargo.toml
crates/jarvis-application/src/: adversarial_tests.rs  approval_tests.rs  health.rs  lib.rs  location.rs  model.rs  orchestrator.rs  orchestrator_tests.rs  policy.rs  policy_tests.rs  ports.rs  queue.rs  queue_tests.rs  testing.rs
crates/jarvis-contracts/: Cargo.toml
crates/jarvis-domain/: Cargo.toml
crates/jarvis-infra/: Cargo.toml
crates/jarvis-infra/src/: approvals.rs  artifact_cas.rs  artifacts.rs  audit.rs  audit_sink.rs  db.rs  dispatcher.rs  events.rs  grants.rs  identity.rs  lib.rs  messages.rs  runs.rs  sessions.rs
crates/jarvis-infra/tests/: artifacts.rs  event_log.rs  grants.rs  orchestration.rs  outbox_dispatch.rs  persistence.rs
crates/jarvisd/: Cargo.toml
crates/jarvisd/src/: api.rs  approvals.rs  artifacts.rs  auth.rs  config.rs  display.rs  lib.rs  location.rs  main.rs  observability.rs  problem.rs  runs.rs  sessions.rs  tools.rs  ws.rs
crates/jarvisd/tests/: approvals.rs  artifacts_api.rs  auth.rs  config.rs  display_api.rs  health.rs  runs_api.rs  sessions_api.rs  ws_stream.rs
crates/xtask/: Cargo.toml
docs/: 00-vision.md  01-requirements.md  02-architecture.md  03-tech-stack.md  04-data-model.md  05-api-contracts.md  08-roadmap.md  09-operations.md  10-references.md  12-ui-design.md
docs/adr/: README.md
docs/design-refs/: jarvis-hud-final.html  jarvis-hud-live.html  jarvis-hud-states.html
docs/features/: F1.6-threat-note.md  F1.7-threat-note.md
docs/milestones/: F1.7-implementation-status.md  M0-features.md  M0-gate-report.md  M1-features.md  M1-gate-report.md  M2-features.md  M2-gate-report.md  M2-security-carryforward.md  M3-features.md
infra/: azure-pipelines.yml  jarvisd.dev.toml
infra/ci/: smoke.sh
migrations/: 0001_identity_init.sql  0002_conversation_init.sql  0003_audit_init.sql  0004_outbox_init.sql  0005_conversation_idempotency.sql  0006_orchestration_init.sql  0007_outbox_notify.sql  0008_orchestration_state_checks.sql  0009_tooling_init.sql  0010_artifact_init.sql
tools/mcp-echo-fixture/: Cargo.toml
tools/mcp-echo-fixture/src/: main.rs
tools/mcp-echo-fixture/tests/: mcp_host.rs
web/: .gitignore  README.md  angular.json  eslint.config.js  karma.conf.js  package-lock.json  package.json
web/src/: index.html
(+91 files in other folders)
