[package]
name = "jarvis-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
jarvis-domain.workspace = true
jarvis-application.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["process", "sync", "time", "io-util", "fs"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tracing = "0.1"
futures-util = "0.3"
async-trait = "0.1"

[dev-dependencies]
# Async unit tests (`#[tokio::test]`) for the tool executors; the current-thread
# runtime is enough — production code needs no `rt`/`macros`.
tokio = { version = "1", features = ["rt", "macros"] }
