[package]
name = "jarvis-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
jarvis-domain.workspace = true
jarvis-application.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["process", "sync", "time", "io-util", "fs"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tracing = "0.1"
futures-util = "0.3"
async-trait = "0.1"
# MCP host (client) role only (F2.7, docs/03 §MCP, docs/06 §5): Jarvis launches
# and drives out-of-process tool servers; it never runs a server. Default
# features carry the async-rw transport used to speak to the child over stdio.
rmcp = { version = "2.2.0", features = ["client", "transport-child-process"] }

[dev-dependencies]
# Async unit tests (`#[tokio::test]`) for the tool executors; the current-thread
# runtime is enough — production code needs no `rt`/`macros`. `test-util` gives
# the paused-clock (`start_paused`) the TimeoutExecutor tests use to assert a
# deadline fires without sleeping in real time.
tokio = { version = "1", features = ["rt", "macros", "test-util"] }
