[package]
name = "jarvis-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Not on workspace lints: CLAUDE.md permits justified `unsafe` in this crate only
# (comment + test required per block). Deny stays until the first such block exists.
[lints.rust]
unsafe_code = "deny"

[dependencies]
jarvis-contracts.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "time", "sync"] }
tokio-tungstenite = "0.29"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
