[package]
name = "jarvisd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
jarvis-domain.workspace = true
jarvis-application.workspace = true
jarvis-contracts.workspace = true
jarvis-infra.workspace = true
jarvis-adapters.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs"] }
figment = { version = "0.10", features = ["toml", "env"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls"] }
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
ulid = "1"
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.31"
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic"] }

[dev-dependencies]
http-body-util = "0.1"
# FakeModel + fake ports for the gateway integration tests (never in the binary).
jarvis-application = { workspace = true, features = ["fixtures"] }
# `#[sqlx::test]` throwaway DBs for the end-to-end streaming/resync test; the
# extra features unify into the test build only (the binary stays lean).
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "migrate", "time"] }
# WebSocket client for the real-socket streaming test (matches the version axum
# already pulls in for its `ws` feature, so no duplicate build).
tokio-tungstenite = "0.29"
